--- a/17/index.html
+++ b/17/index.html
@@ -19,10 +19,12 @@
       .coluna {
         padding: 0;
         text-align: center;
+        margin-right: 5px;
       }
       .img-fluid {
         max-width: 100%;
         height: auto;
+        border-radius: 10px;
       }
     </style>
   </head>
@@ -30,29 +32,29 @@
     <div class="container conteudo">
   
       <div class="row linha">
-        <div class="col-md-4 col-sm-6 coluna">
+        <div class="col-md-3 col-sm-4 coluna">
           <img src="imggato/g1.jpeg" alt="Imagem 1" class="img-fluid">
         </div>
-        <div class="col-md-4 col-sm-6 coluna">
+        <div class="col-md-3 col-sm-4 coluna">
           <img src="imggato/g2.jpeg" alt="Imagem 2" class="img-fluid">
         </div>
-        <div class="col-md-4 col-sm-12 coluna">
+        <div class="col-md-3 col-sm-4 coluna">
           <img src="imggato/g3.jpeg" alt="Imagem 3" class="img-fluid">
         </div>
       </div>
       <div class="row linha">
-        <div class="col-md-4 col-sm-6 coluna">
+        <div class="col-md-3 col-sm-4 coluna">
           <img src="imggato/g4.jpeg" alt="Imagem 4" class="img-fluid">
         </div>
-        <div class="col-md-4 col-sm-6 coluna">
+        <div class="col-md-3 col-sm-4 coluna">
           <img src="imggato/g5.jpeg" alt="Imagem 5" class="img-fluid">
         </div>
-        <div class="col-md-4 col-sm-12 coluna">
+        <div class="col-md-3 col-sm-4 coluna">
           <img src="imggato/g6.jpeg" alt="Imagem 6" class="img-fluid">
         </div>
       </div>
       <div class="row linha">
-        <div class="col-md-4 col-sm-6 coluna">
+        <div class="col-md-3 col-sm-4 coluna">
           <img src="imggato/g7.jpeg" alt="Imagem 7" class="img-fluid">
         </div>
       </div>
