--- a/17/index.html
+++ b/17/index.html
@@ -26,6 +26,9 @@
         height: auto;
         border-radius: 10px;
       }
+      .h-100 {
+        height: 100%;
+      }
     </style>
   </head>
   <body>
