--- a/17/index.html
+++ b/17/index.html
@@ -29,6 +29,12 @@
       .h-100 {
         height: 100%;
       }
+      .d-flex {
+        display: flex;
+      }
+      .flex-column {
+        flex-direction: column;
+      }
     </style>
   </head>
   <body>
