--- a/17/index.html
+++ b/17/index.html
@@ -40,10 +40,10 @@
   <body>
     <div class="container conteudo">
   
-      <div class="row"> flex
+      <div class="row"> 
         <div class="col-sm-6 coluna mb-3 mt-2">
         <div class="col-sm-6 coluna mb-3 mt-2">
-        <div class="col-sm-3"> flex
+        <div class="col-sm-3">
           <img src="imggato/g1.jpeg" alt="Imagem 1" class="g2">
         </div>
         <div class="col-md-3 col-sm-4 coluna">
