--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
      <a href="18">Atividade 18</a> Formulários tabelas <br>
      <a href="19">Atividade 19 </a> botões e imgens responsivas <br>
      <a href="20">Atividade 20 </a> barra de navegação<br>
+     <a href="projeto02"> Projeto 02 </a> projeto 02<br>
     </body>
 </html>
