--- a/19/index.html
+++ b/19/index.html
@@ -58,6 +58,34 @@
 <body>
 
     <div class="container">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 mb-3 mt-2">
+                    <h1>Botões Padrões</h1>
+                    <a href="#" class="btn btn-default">Botão Link</a>
+                    <input tyoe="submit" class="btn btn-default" value="Botão Submit">
+                    <button class="btn btn-default">Botão Button</button>
+                </div>
+                <div class="col-sm-6 mb-3 mt-2">
+                    <h1>Tipos de Botões</h1>
+                    <div class="row mb-3">
+                        <button class="btn btn-default">Botão</button>
+                        <button class="btn btn-primary">Botão</button>
+                        <button class="btn btn-success">Botão</button>
+                        <button class="btn btn-danger">Botão</button>
+                        <button class="btn btn-warning">Botão</button>
+                        <button class="btn btn-info">Botão</button>
+                        <button class="btn btn-link">Botão</button>
+                    </div>
+                    <div class="row mb-3">
+                        <button class="btn btn-default btn-xs">Botão</button>
+                        <button class="btn btn-primary btn-sm">Botão</button>
+                        <button class="btn btn-success btn-md">Botão</button>
+                        <button class="btn btn-danger btn-lg">Botão</button>
+                    </div>     
+                </div>
+            </div>
+        </div>
         <div class="profile-header">
             
             <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
