--- a/17/index.html
+++ b/17/index.html
@@ -48,38 +48,40 @@
   </head>
   <body>
     <div class="container conteudo">
+      <div class="row">
+          <div class="col-sm-6 coluna mb-3 mt-2">
+              <img class="g2" src="imggato/g1.jpeg" alt="Imagem 1">
+          </div>
+          <div class="col-sm-6 coluna mb-3 mt-2">
+              <div class="row mb-3">
+                  <div class="col-sm-12 coluna">
+                      <img src="imggato/g2.jpeg" class="img-fluid" alt="Imagem 2">
+                  </div>
+              </div>
+              <div class="row mb-3">
+                  <div class="col-sm-6 coluna">
+                      <img class="img-fluid" src="imggato/g3.jpeg" alt="Imagem 3">
+                  </div>
+                  <div class="col-sm-6 coluna">
+                      <img class="img-fluid" src="imggato/g4.jpeg" alt="Imagem 4">
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-sm-4 coluna">
+                      <img class="img-fluid" src="imggato/g5.jpeg" alt="Imagem 5">
+                  </div>
+                  <div class="col-sm-4 coluna">
+                      <img class="img-fluid" src="imggato/g6.jpeg" alt="Imagem 6">
+                  </div>
+                  <div class="col-sm-4 coluna">
+                      <img class="img-fluid" src="imggato/g7.jpeg" alt="Imagem 7">
+                  </div>
+              </div>
+          </div>
+      </div>  
+  </div>
   
-      <div class="row"> 
-        <div class="col-sm-6 coluna mb-3 mt-2">
-        <div class="col-sm-6 coluna mb-3 mt-2">
-        <div class="col-sm-3">
-          <img src="imggato/g1.jpeg" alt="Imagem 1" class="g2">
-        </div>
-        <div class="col-md-3 col-sm-4 coluna">
-          <img src="imggato/g2.jpeg" alt="Imagem 2" class="img-fluid">
-        </div>
-        <div class="col-md-3 col-sm-4 coluna">
-          <img src="imggato/g3.jpeg" alt="Imagem 3" class="img-fluid">
-        </div>
-      </div>
-      <div class="row linha">
-        <div class="col-md-3 col-sm- coluna">
-          <img src="imggato/g4.jpeg" alt="Imagem 4" class="img-fluid">
-        </div>
-        <div class="col-md-3 col-sm-4 coluna">
-          <img src="imggato/g5.jpeg" alt="Imagem 5" class="img-fluid">
-        </div>
-        <div class="col-md-3 col-sm-4 coluna">
-          <img src="imggato/g6.jpeg" alt="Imagem 6" class="img-fluid">
-        </div>
-      </div>
-      <div class="row linha">
-        <div class="col-md-3 col-sm-4 coluna">
-          <img src="imggato/g7.jpeg" alt="Imagem 7" class="img-fluid">
-        </div>
-      </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
+  </html>
 </html>
