--- a/17/index.html
+++ b/17/index.html
@@ -50,31 +50,31 @@
     <div class="container conteudo">
       <div class="row">
           <div class="col-sm-6 coluna mb-3 mt-2">
-              <img class="g2" src="imggato/g1.jpeg" alt="Imagem 1">
+              <img class="imagem1" src="imggato/g1.jpeg">
           </div>
           <div class="col-sm-6 coluna mb-3 mt-2">
               <div class="row mb-3">
                   <div class="col-sm-12 coluna">
-                      <img src="imggato/g2.jpeg" class="img-fluid" alt="Imagem 2">
+                      <img src="imggato/g2.jpeg" class="imagem2">
                   </div>
               </div>
               <div class="row mb-3">
                   <div class="col-sm-6 coluna">
-                      <img class="img-fluid" src="imggato/g3.jpeg" alt="Imagem 3">
+                      <img class="imagem3" src="imggato/g3.jpeg">
                   </div>
                   <div class="col-sm-6 coluna">
-                      <img class="img-fluid" src="imggato/g4.jpeg" alt="Imagem 4">
+                      <img class="imagem3" src="imggato/g4.jpeg">
                   </div>
               </div>
               <div class="row">
                   <div class="col-sm-4 coluna">
-                      <img class="img-fluid" src="imggato/g5.jpeg" alt="Imagem 5">
+                      <img class="imagem4" src="imggato/g5.jpeg">
                   </div>
                   <div class="col-sm-4 coluna">
-                      <img class="img-fluid" src="imggato/g6.jpeg" alt="Imagem 6">
+                      <img class="imagem4" src="imggato/g6.jpeg">
                   </div>
                   <div class="col-sm-4 coluna">
-                      <img class="img-fluid" src="imggato/g7.jpeg" alt="Imagem 7">
+                      <img class="imagem4" src="imggato/g7.jpeg">
                   </div>
               </div>
           </div>
@@ -84,4 +84,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
   </html>
-</html>
