--- a/19/index.html
+++ b/19/index.html
@@ -142,6 +142,27 @@
             </div>
         </div>
 
+        <div class="container">
+            <h1>Imagens Responsivas</h1>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h1>Imagem Responsiva</h1>
+                    <img src="img/uvas.pnj" class="img-fluid">
+                </div>
+                <div class="col-sm-6">
+                    <h1>Imagem Não Responsiva</h1>
+                    <img src="img/uvas.pnj">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1>Formas em Imagem</h1>
+                    <img src="img/uvas200.png" class="rounded-circle">
+                    <img src="img/uvas200.png" class="rounded">
+                </div>
+            </div>
+        </div>
+
         <div class="profile-header">
             <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
             <div class="profile-name">Nina Mcintire</div>
