--- a/19/index.html
+++ b/19/index.html
@@ -147,11 +147,11 @@
             <div class="row">
                 <div class="col-sm-6">
                     <h1>Imagem Responsiva</h1>
-                    <img src="img/uvas.pnj" class="img-fluid">
+                    <img src="img/uvas.png" class="img-fluid">
                 </div>
                 <div class="col-sm-6">
                     <h1>Imagem Não Responsiva</h1>
-                    <img src="img/uvas.pnj">
+                    <img src="img/uvas.png">
                 </div>
             </div>
             <div class="row">
