--- a/19/index.html
+++ b/19/index.html
@@ -164,6 +164,9 @@
         </div>
 
         <div class="profile-header">
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <h2>User Profile</h2>
             <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
             <div class="profile-name">Nina Mcintire</div>
             <div class="profile-title">Software Engineer</div>
