--- a/19/index.html
+++ b/19/index.html
@@ -143,22 +143,21 @@
         </div>
 
         <div class="container">
-            
             <div class="row">
                 <div class="col-sm-6">
                     <h1>Imagem Responsiva</h1>
-                    <img src="img/uvas.png" class="img-fluid">
+                    <img src="img/uvas.png" class="img-fluid" alt="Imagem responsiva">
                 </div>
                 <div class="col-sm-6">
                     <h1>Imagem Não Responsiva</h1>
-                    <img src="img/uvas.png">
+                    <img src="img/uvas.png" alt="Imagem não responsiva">
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
                     <h1>Formas em Imagem</h1>
-                    <img src="img/uvas200.png" class="rounded-circle">
-                    <img src="img/uvas200.png" class="rounded">
+                    <img src="img/uvas200.png" class="rounded-circle" alt="Imagem redonda">
+                    <img src="img/uvas200.png" class="rounded" alt="Imagem arredondada">
                 </div>
             </div>
         </div>
@@ -167,28 +166,33 @@
             <div class="row justify-content-center">
                 <div class="col-md-4">
                     <h2>User Profile</h2>
-            <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
-            <div class="profile-name">Nina Mcintire</div>
-            <div class="profile-title">Software Engineer</div>
-        </div>
+                    <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="profile-name">Nina Mcintire</div>
+                    <div class="profile-title">Software Engineer</div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <div class="stats">
+                        <div class="stat">
+                            <div class="label">Followers</div>
+                            <div class="number">1,322</div>
+                        </div>
+                        <div class="stat">
+                            <div class="label">Following</div>
+                            <div class="number">543</div>
+                        </div>
+                        <div class="stat">
+                            <div class="label">Friends</div>
+                            <div class="number">13,287</div>
+                        </div>
+                    </div>
 
-        <div class="stats">
-            <div class="stat">
-                <div class="label">Followers</div>
-                <div class="number">1,322</div>
+                    <div class="text-center follow-button">
+                        <button class="btn btn-primary">Follow</button>
+                    </div>
+                </div>
             </div>
-            <div class="stat">
-                <div class="label">Following</div>
-                <div class="number">543</div>
-            </div>
-            <div class="stat">
-                <div class="label">Friends</div>
-                <div class="number">13,287</div>
-            </div>
-        </div>
-
-        <div class="text-center follow-button">
-            <button class="btn btn-primary">Follow</button>
         </div>
     </div>
 </body>
