--- a/19/index.html
+++ b/19/index.html
@@ -165,6 +165,9 @@
         <div class="profile-header">
             <div class="row justify-content-center">
                 <div class="col-md-4">
+                    <h2 class="border-bottom border-primary pb-2">
+            <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
+
                     <h2>User Profile</h2>
                     <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
                     <div class="profile-name">Nina Mcintire</div>
