--- a/19/index.html
+++ b/19/index.html
@@ -6,7 +6,7 @@
     <title>Atividade 19</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        .box {
+       .box {
             width: 70px;
             height: 70px;
             padding: 10px;
@@ -162,16 +162,13 @@
             </div>
         </div>
 
-        
         <div class="profile-header">
             <div class="row justify-content-center">
                 <div class="col-md-4">
-                    <h2 class="border-bottom border-primary pb-2">User Profile</h2>
-                    <div class="profile-card border border-primary rounded">
-                        <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
-                        <div class="profile-name">Nina Mcintire</div>
-                        <div class="profile-title">Software Engineer</div>
-                    </div>
+                    <h2>User Profile</h2>
+                    <img src="img/meni.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="profile-name">Nina Mcintire</div>
+                    <div class="profile-title">Software Engineer</div>
                 </div>
             </div>
             <div class="row justify-content-center">
