--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
      <a href="19">Atividade 19 </a> botões e imgens responsivas <br>
      <a href="20">Atividade 20 </a> barra de navegação<br>
      <a href="projeto02"> Projeto 02 </a> projeto 02<br>
+    <a href="21">Atividade 21 </a>  Alerts tooltip Popover <br>
+    <a href="22">Atividade 22 </a> Incluindo javaScript no HTML  <br>
+    <a href="23">Atividade 23 </a> Manipulação de Arrays <br>
+    <a href="projeto03"> Projeto 03 </a> Consulta de CEP <br>
     </body>
 </html>
