--- a/22/index.html
+++ b/22/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contagem de 1 a n</title>
+    <title>Atividade 22</title>
     <script src="script.js" defer></script> 
 </head>
 <body>
     <h1>Contagem de 1 a n</h1>
     <button onclick="escreverNumeros()">Contar até n</button>
     <div id="resultado"></div> 
+
+    <hr>
+
+    <h1>Calculadora de Raiz Quadrada</h1>
+    <a href="#" onclick="calcularRaiz(25)">Raiz de 25</a><br>
+    <a href="#" onclick="calcularRaiz(36)">Raiz de 36</a><br>
+    <a href="#" onclick="calcularRaiz(49)">Raiz de 49</a><br>
 </html>
