--- a/22/index.html
+++ b/22/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 22</title>
     <script src="script.js" defer></script> 
+    <script src="raiz.js" defer></script> 
 </head>
 <body>
     <h1>Contagem de 1 a n</h1>
