--- a/22/index.html
+++ b/22/index.html
@@ -18,4 +18,5 @@
     <a href="#" onclick="calcularRaiz(25)">Raiz de 25</a><br>
     <a href="#" onclick="calcularRaiz(36)">Raiz de 36</a><br>
     <a href="#" onclick="calcularRaiz(49)">Raiz de 49</a><br>
+</body>
 </html>
