--- a/22/index.html
+++ b/22/index.html
@@ -23,7 +23,9 @@
     <hr>
 
     <h2>Calculadora de Raiz Quadrada</h2>
-    <button class="btn btn-secondary" onclick="calcularRaiz()">Calcular Raiz</button>
+    <a href="#" onclick="calcularRaiz(25)">Raiz de 25</a><br>
+    <a href="#" onclick="calcularRaiz(36)">Raiz de 36</a><br>
+    <a href="#" onclick="calcularRaiz(49)">Raiz de 49</a><br>
 
     <hr>
 
