--- a/22/index.html
+++ b/22/index.html
@@ -30,7 +30,7 @@
     <hr>
 
     <h2>Exibir Texto em Modal</h2>
-    <button class="btn btn-info" onclick="mostrarModal()">Mostrar Modal</button>
+    <button class="btn btn-info" onclick="mostrarModal()">Escreva um texto</button>
 
    
     <div class="modal fade" id="meuModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
