--- a/projeto03/index.html
+++ b/projeto03/index.html
@@ -65,6 +65,11 @@
             <div class="mb-3">
               <label for="uf" class="form-label">Estado (UF):</label>
               <input type="text" class="form-control" id="uf" readonly />
+            <div class="mb-3">
+              <label for="ibge" class="form-label">IBGE:</label>
+              <input type="text" class="form-control" id="ibge" readonly />
+            </div>
+          </div>
             </div>
           </div>
         </div>
