--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <a href="21">Atividade 21 </a>  Alerts tooltip Popover <br>
     <a href="22">Atividade 22 </a> Incluindo javaScript no HTML  <br>
     <a href="23">Atividade 23 </a> Manipulação de Arrays <br>
+    <a href="23">Atividade 23 </a> Jquery <br>
     <a href="projeto03"> Projeto 03 </a> Projeto 03 <br>
     </body>
 </html>
