--- a/projeto03/index.html
+++ b/projeto03/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto_3</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script
-      src="https://kit.fontawesome.com/4b55daf142.js"
-      crossorigin="anonymous"
-    ></script>
+    <title>Projeto 03</title>
+    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=P9m6qLuy6D8C-c6pmGo6CUT_7m5bXM5PAw6sXcB3iftn2TtYzdHtljoZqExawGL9jEw2_AgpmvIAyZuEHdy1Ew" charset="UTF-8"></script><script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,19 +23,20 @@
                   type="text"
                   class="form-control"
                   id="cep"
-                  placeholder="Ex: 65630690"
+                  placeholder="Ex: 64000000"
                   maxlength="8"
                 />
               </div>
               <div class="d-flex justify-content-center">
-              <button type="button" id="consultar" class="btn btn-primary">
+                <button type="button" id="consultar" class="btn btn-primary">
                   Consultar
-                 </button>
+                </button>
               </div>
             </form>
           </div>
         </div>
       </div>
+
       <div class="row justify-content-center mt-4">
         <div class="col-md-6">
           <div class="bg-white p-4 rounded shadow-sm">
@@ -53,6 +50,7 @@
                 readonly
               />
             </div>
+
             <div class="mb-3">
               <label for="bairro" class="form-label">Bairro:</label>
               <input type="text" class="form-control" id="bairro" readonly />
@@ -62,20 +60,22 @@
               <label for="cidade" class="form-label">Cidade:</label>
               <input type="text" class="form-control" id="cidade" readonly />
             </div>
+
             <div class="mb-3">
               <label for="uf" class="form-label">Estado (UF):</label>
               <input type="text" class="form-control" id="uf" readonly />
+            </div>
+
             <div class="mb-3">
-              <label for="ibge" class="form-label">IBGE:</label>
-              <input type="text" class="form-control" id="ibge" readonly />
-            </div>
-          </div>
-            </div>
+                <label for="ibge" class="form-label">IBGE:</label>
+                <input type="text" class="form-control" id="ibge" readonly />
+              </div>
           </div>
         </div>
       </div>
     </div>
-     <script src="script.js"></script>
+
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
