--- a/projeto03/index.html
+++ b/projeto03/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto 03</title>
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=P9m6qLuy6D8C-c6pmGo6CUT_7m5bXM5PAw6sXcB3iftn2TtYzdHtljoZqExawGL9jEw2_AgpmvIAyZuEHdy1Ew" charset="UTF-8"></script><script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,9 +27,12 @@
                   maxlength="8"
                 />
               </div>
-              <div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-between">
                 <button type="button" id="consultar" class="btn btn-primary">
                   Consultar
+                </button>
+                <button type="button" id="limpar" class="btn btn-secondary">
+                  Limpar
                 </button>
               </div>
             </form>
@@ -67,9 +70,9 @@
             </div>
 
             <div class="mb-3">
-                <label for="ibge" class="form-label">IBGE:</label>
-                <input type="text" class="form-control" id="ibge" readonly />
-              </div>
+              <label for="ibge" class="form-label">IBGE:</label>
+              <input type="text" class="form-control" id="ibge" readonly />
+            </div>
           </div>
         </div>
       </div>
